# python-project-group-9

./: .gitignore  README.md  address_book.py  handlers.py  install.bat  install.sh  main.py  notebook.json  notebook.pkl  prompt_helper.py  pyproject.toml  requirements.txt  run.bat  run.sh
assistant_bot_team9.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
birthdays/: Utils.py  __init__.py  get_upcoming_birthdays.py
contacts/: __init__.py  birthdays.py  handlers.py  help.py  models.py  storage.py
core/: about.py  completion.py  game.py  help.py  help_text.py  intro.py  parser.py  table_utils.py  theme.py  utils.py
data/: contacts.json  notebook.json
fields/: __init__.py  base_field.py  email.py  phone.py
notebook/: handlers.py  models.py  notebook.py  search.py  storage.py
