[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-bot-team9"
version = "1.0.0"
description = "Бот-помічник TEAM-9 — адресна книга та нотатки"
requires-python = ">=3.8"
dependencies = [
    "prompt_toolkit>=3.0",
    "prettytable>=3.0",
    "colorama>=0.4.6",
]

[project.scripts]
assistant = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "contacts*",
    "notebook*",
    "core*",
    "fields*",
    "birthdays*",
]
